// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
  id={null}
>
  <li
    className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
  >
    <h6
      className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
      fontSize="1em"
      fontWeight={600}
      letterSpacing="0px"
    >
      My List
    </h6>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
    disabled={false}
    href={null}
    id={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
    disabled={false}
    href={null}
    id={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
    disabled={false}
    href={null}
    id={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 2`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
  id={null}
>
  <li
    className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
  >
    <h6
      className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
      fontSize="1em"
      fontWeight={600}
      letterSpacing="0px"
    >
      List Items via Array
    </h6>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
    disabled={false}
    href={null}
    id="List Item 1"
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          List Item 1
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
    disabled={true}
    href={null}
    id="List Item 2"
    tabIndex="-1"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          List Item 2
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
    disabled={false}
    href={null}
    id="List Item 3"
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          List Item 3
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 bivhEj"
    disabled={false}
    href={null}
    id="List Item 4"
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          List Item 4
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 3`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
  id={null}
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
    disabled={false}
    href={null}
    id={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          List Item (standard)
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 BMTkE"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.4px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 bivhEj"
    disabled={false}
    href={null}
    id={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          List Item (selected)
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 BMTkE"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.4px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
    disabled={true}
    href={null}
    id={null}
    tabIndex="-1"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          List Item (disabled)
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 BMTkE"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.4px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm"
  id={null}
  rows={null}
>
  <ul
    className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
    id={null}
  >
    <li
      className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Standard
      </h6>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
  </ul>
  <ul
    className="List__ListWrapper-sc-43f2zq-0 ikbOwz"
    id={null}
  >
    <li
      className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Standard (inverse)
      </h6>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
  </ul>
  <ul
    className="List__ListWrapper-sc-43f2zq-0 DEwqS"
    id={null}
  >
    <li
      className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        With a Divider
      </h6>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
  </ul>
  <ul
    className="List__ListWrapper-sc-43f2zq-0 hEDtIn"
    id={null}
  >
    <li
      className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        With a Divider (inverse)
      </h6>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
  </ul>
  <ul
    className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
    id={null}
  >
    <li
      className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Interactive
      </h6>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
  </ul>
  <ul
    className="List__ListWrapper-sc-43f2zq-0 ikbOwz"
    id={null}
  >
    <li
      className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Interactive (inverse)
      </h6>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 eLkOiD"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
  </ul>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm"
  id={null}
  rows={null}
>
  <ul
    className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
    id={null}
  >
    <li
      className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Pre-Label
      </h6>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 boCGaE"
        >
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 jpzouZ"
            id={null}
            onClick={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 gDyDyY Avatar__AvatarText-sc-1vuf9om-0 hlRAOS"
              fontSize="1em"
              fontWeight={400}
              letterSpacing="0px"
            >
              AB
            </h6>
          </div>
        </div>
        <div
          className="Bar__Slot-icfo76-1 yvaBx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 boCGaE"
        >
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 jpzouZ"
            id={null}
            onClick={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 gDyDyY Avatar__AvatarText-sc-1vuf9om-0 hlRAOS"
              fontSize="1em"
              fontWeight={400}
              letterSpacing="0px"
            >
              CD
            </h6>
          </div>
        </div>
        <div
          className="Bar__Slot-icfo76-1 yvaBx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 boCGaE"
        >
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 jpzouZ"
            id={null}
            onClick={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 gDyDyY Avatar__AvatarText-sc-1vuf9om-0 hlRAOS"
              fontSize="1em"
              fontWeight={400}
              letterSpacing="0px"
            >
              EF
            </h6>
          </div>
        </div>
        <div
          className="Bar__Slot-icfo76-1 yvaBx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 boCGaE"
        >
          <div
            className="Avatar__TagContainer-sc-1vuf9om-2 jpzouZ"
            id={null}
            onClick={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 gDyDyY Avatar__AvatarText-sc-1vuf9om-0 hlRAOS"
              fontSize="1em"
              fontWeight={400}
              letterSpacing="0px"
            >
              GH
            </h6>
          </div>
        </div>
        <div
          className="Bar__Slot-icfo76-1 yvaBx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
      </div>
    </li>
  </ul>
  <ul
    className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
    id={null}
  >
    <li
      className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Post Label
      </h6>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dykTmk"
            id={null}
            label="Label"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 lgicJH"
              fontSize="0.68em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="1px"
            >
              Label
            </label>
          </div>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dykTmk"
            id={null}
            label="6"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 lgicJH"
              fontSize="0.68em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="1px"
            >
              6
            </label>
          </div>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dykTmk"
            id={null}
            label="NEW!"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 lgicJH"
              fontSize="0.68em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="1px"
            >
              NEW!
            </label>
          </div>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Tag__TagContainer-sc-128kb3h-0 dykTmk"
            id={null}
            label="9"
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 lgicJH"
              fontSize="0.68em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="1px"
            >
              9
            </label>
          </div>
        </div>
      </div>
    </li>
  </ul>
  <ul
    className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
    id={null}
  >
    <li
      className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Post Icon
      </h6>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-right fa-w-6 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="angle-right"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M187.8 264.5L41 412.5c-4.7 4.7-12.3 4.7-17 0L4.2 392.7c-4.7-4.7-4.7-12.3 0-17L122.7 256 4.2 136.3c-4.7-4.7-4.7-12.3 0-17L24 99.5c4.7-4.7 12.3-4.7 17 0l146.8 148c4.7 4.7 4.7 12.3 0 17z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-info fa-w-6 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="info"
            data-prefix="fas"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <a
            className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
            onClick={[Function]}
          >
            <a
              className="Icon__LinkedIcon-sc-1oa9m1v-0 fgVuzC"
              disabled={null}
              href={null}
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-home-alt fa-w-18 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 kxrdnu"
                color="link"
                data-icon="home-alt"
                data-prefix="fas"
                focusable="false"
                fontSize="inherit"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
          </a>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <a
            className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
            onClick={[Function]}
          >
            <a
              className="Icon__LinkedIcon-sc-1oa9m1v-0 fgVuzC"
              disabled={null}
              href={null}
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-bookmark fa-w-12 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 kxrdnu"
                color="link"
                data-icon="bookmark"
                data-prefix="far"
                focusable="false"
                fontSize="inherit"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
          </a>
        </div>
      </div>
    </li>
  </ul>
</section>
`;

exports[` 6`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm"
  id={null}
  rows={null}
>
  <ul
    className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
    id={null}
  >
    <li
      className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Checkbox
      </h6>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
            disabled={false}
          >
            <input
              checked={null}
              className="Checkbox__CheckboxInput-sc-1gwp7am-2 jqvvci"
              id={null}
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="checkbox"
            />
          </div>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
            disabled={false}
          >
            <input
              checked={null}
              className="Checkbox__CheckboxInput-sc-1gwp7am-2 jqvvci"
              id={null}
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="checkbox"
            />
          </div>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
            disabled={false}
          >
            <input
              checked={null}
              className="Checkbox__CheckboxInput-sc-1gwp7am-2 jqvvci"
              id={null}
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="checkbox"
            />
          </div>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
            disabled={false}
          >
            <input
              checked={null}
              className="Checkbox__CheckboxInput-sc-1gwp7am-2 jqvvci"
              id={null}
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="checkbox"
            />
          </div>
        </div>
      </div>
    </li>
  </ul>
  <ul
    className="List__ListWrapper-sc-43f2zq-0 jUoCfC"
    id={null}
  >
    <li
      className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 fnUHAi List__ListTitle-sc-43f2zq-3 bbfEBL"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Toggle
      </h6>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Switch__SwitchContainer-sc-1bvlvzt-0 hGOHyg"
            disabled={false}
            id={null}
            label={null}
            onClick={[Function]}
          >
            <div
              checked={false}
              className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
              disabled={false}
              onChange={null}
            >
              <div
                checked={false}
                className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
                disabled={false}
              />
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Switch__SwitchContainer-sc-1bvlvzt-0 hGOHyg"
            disabled={false}
            id={null}
            label={null}
            onClick={[Function]}
          >
            <div
              checked={false}
              className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
              disabled={false}
              onChange={null}
            >
              <div
                checked={false}
                className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
                disabled={false}
              />
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Switch__SwitchContainer-sc-1bvlvzt-0 hGOHyg"
            disabled={false}
            id={null}
            label={null}
            onClick={[Function]}
          >
            <div
              checked={false}
              className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
              disabled={false}
              onChange={null}
            >
              <div
                checked={false}
                className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
                disabled={false}
              />
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="List__ListItemWrapper-sc-43f2zq-1 hugnlQ"
      disabled={false}
      href={null}
      id={null}
      tabIndex="0"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 fIRUJx"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
            fontSize="1em"
            fontWeight={400}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 BMTkE"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.4px"
          >
            This is the description
          </p>
        </div>
        <div
          className="Bar__Slot-icfo76-1 cxljst"
        >
          <div
            className="Switch__SwitchContainer-sc-1bvlvzt-0 hGOHyg"
            disabled={false}
            id={null}
            label={null}
            onClick={[Function]}
          >
            <div
              checked={false}
              className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
              disabled={false}
              onChange={null}
            >
              <div
                checked={false}
                className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
                disabled={false}
              />
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</section>
`;
